add example stock module